Setting the display on mobile devices and fixing the 'cancel' button

--- a/src/app/competencies/confirm-remove-dialog/remove-dialog.component.scss
+++ b/src/app/competencies/confirm-remove-dialog/remove-dialog.component.scss
@@ -1,7 +1,6 @@
 .dialog {
   display: flex;
   flex-direction: column;
-  width: 400px;
 
   &__header {
     font-size: 16px;
@@ -21,4 +20,3 @@
     }
   }
 }
-
