--- a/src/app/competencies/person-update-dialog/person-update-dialog.component.scss
+++ b/src/app/competencies/person-update-dialog/person-update-dialog.component.scss
@@ -1,7 +1,6 @@
 .dialog {
   display: flex;
   flex-direction: column;
-  width: 500px;
 
   &__header {
     font-size: 16px;
